--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <label class="search__icon">
                     <i class="fas fa-map-marker-alt"></i>
                 </label>
-                <input type="search" class="search" placeholder="Paris, Belleville">
+                <input type="search" class="search" value="Paris, Belleville">
             </div>
             <div class="menu">
                 <h1 class="menu__info">
@@ -54,24 +54,24 @@
                 <h2 class="functioning__title">Fonctionnement</h2>
                 <ol class="functioning__list">
                     <li>
-                        <a href="#">
+                        <a href="#" class="function">
                             <div class="number">1</div>
                             <i class="fas fa-mobile-alt"></i>
-                            Choisissez un restaurant
+                            <p>Choisissez un restaurant</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#" class="function">
                             <div class="number">2</div>
                             <i class="fas fa-list-ul"></i>
-                            Composez votre menu
+                            <p>Composez votre menu</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#" class="function">
                             <div class="number">3</div>
                             <i class="fas fa-store"></i>
-                            Dégustez au restaurant
+                            <p>Dégustez au restaurant</p>
                         </a>
                     </li>
                 </ol>
@@ -92,12 +92,12 @@
                                 <p>
                                     Ménilmontant
                                 </p>
-                                <div class="heart">
-                                    <i class="fas fa-heart" aria-hidden="true"></i>
-                                </div>
                             </figcaption>
                         </figure>
                     </a>
+                    <div class="heart">
+                        <i class="fas fa-heart" aria-hidden="true"></i>
+                    </div>
                 </div>
                 <div class="container__restaurant-card">
                     <a href="./lanoteenchantee.html">
@@ -111,12 +111,12 @@
                                 <p>
                                     Charonne
                                 </p>
-                                <div class="heart">
-                                    <i class="fas fa-heart" aria-hidden="true"></i>
-                                </div>
                             </figcaption>
                         </figure>
                     </a>
+                    <div class="heart">
+                        <i class="fas fa-heart" aria-hidden="true"></i>
+                    </div>
                 </div>
                 <div class="container__restaurant-card">
                     <a href="./alafrancaise.html">
@@ -129,12 +129,12 @@
                                 <p>
                                     Cité Rouge
                                 </p>
-                                <div class="heart">
-                                    <i class="fas fa-heart" aria-hidden="true"></i>
-                                </div>
                             </figcaption>
                         </figure>
                     </a>
+                    <div class="heart">
+                        <i class="fas fa-heart" aria-hidden="true"></i>
+                    </div>
                 </div>
                 <div class="container__restaurant-card">
                     <a href="./ledelicedessens.html">
@@ -147,18 +147,18 @@
                                 <p>
                                     Folie-Méricourt
                                 </p>
-                                <div class="heart">
-                                    <i class="fas fa-heart" aria-hidden="true"></i>
-                                </div>
                             </figcaption>
                         </figure>
                     </a>
+                    <div class="heart">
+                        <i class="fas fa-heart" aria-hidden="true"></i>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
     <footer>
-        <p>ohmyfood</p>
+        <h5>ohmyfood</h5>
         <ul>
             <li>
                 <a href="#">
