--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" media="screen and (max-width: 992px)" href="./CSS/tablet.css">
-    <link rel="stylesheet" media="screen and (max-width: 768px)" href="./CSS/mobil.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
     </style>
@@ -38,38 +36,38 @@
                 <div class="card__menu">
                     <h3>ENTRÉES</h3>
                     <div class="card__menu__item">
-                        <div class="meal anim1">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Fricassée d'escargot</h4>
-                                    <p class="meal__info__desc">Au piment d'espelette</p>
+                        <div class="meal">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Fricassée d'escargot</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Au piment d'espelette</p>
+                                    <p class="meal__price">25€</p>
                                 </div>
-                                <p class="meal__price">25€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal anim2">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Foie gras de canard mi-cuit</h4>
-                                    <p class="meal__info__desc">Et ses copeaux de truffe noire</p>
+                        <div class="meal slide-delay1">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Foie gras de canard mi-cuit</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Et ses copeaux de truffe noire</p>
+                                    <p class="meal__price">35€</p>
                                 </div>
-                                <p class="meal__price">35€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal anim3">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Oeuf au plat</h4>
-                                    <p class="meal__info__desc">Assaisonné à la truffe sur lit de caviar</p>
+                        <div class="meal slide-delay2">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Oeuf au plat</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Assaisonné à la truffe sur lit de caviar</p>
+                                    <p class="meal__price">20€</p>
                                 </div>
-                                <p class="meal__price">20€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
@@ -79,82 +77,79 @@
                 <div class="card__menu">
                     <h3>PLATS</h3>
                     <div class="card__menu__item">
-                        <div class="meal anim1">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Filet de boeuf aux herbes</h4>
-                                    <p class="meal__info__desc">Accompagné de sa ribambelle de légumes</p>
+                        <div class="meal">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Filet de boeuf aux herbes</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Accompagné de sa ribambelle de légumes</p>
+                                    <p class="meal__price">40€</p>
                                 </div>
-                                <p class="meal__price">40€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-
-                        <div class="meal anim2">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Parmentier de queue de boeuf</h4>
-                                    <p class="meal__info__desc">À la truffe noire sur sa purée de panais</p>
+                        <div class="meal slide-delay1">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Parmentier de queue de boeuf</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">À la truffe noire sur sa purée de panais</p>
+                                    <p class="meal__price">35€</p>
                                 </div>
-                                <p class="meal__price">35€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal anim3">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Filet de Turbot</h4>
-                                    <p class="meal__info__desc">Aux agrumes</p>
+                        <div class="meal slide-delay2">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Filet de Turbot</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Aux agrumes</p>
+                                    <p class="meal__price">44€</p>
                                 </div>
-                                <p class="meal__price">44€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-
                     </div>
                 </div>
                 <div class="card__menu">
                     <h3>DESSERTS</h3>
                     <div class="card__menu__item">
-                        <div class="meal anim1">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Paris-Brest</h4>
-                                    <p class="meal__info__desc">Revisité</p>
+                        <div class="meal">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Paris-Brest</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Revisité</p>
+                                    <p class="meal__price">18€</p>
                                 </div>
-                                <p class="meal__price">18€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal anim2">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Macaron au chocolat d'exception</h4>
-                                    <p class="meal__info__desc">Et glace à la vanille de Madagascar</p>
+                        <div class="meal slide-delay1">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Macaron au chocolat d'exception</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Et glace à la vanille de Madagascar</p>
+                                    <p class="meal__price">22€</p>
                                 </div>
-                                <p class="meal__price">22€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-
-                        <div class="meal anim3">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Mousse au chocolat</h4>
-                                    <p class="meal__info__desc">Au piment d'espelette et à la truffe noire</p>
+                        <div class="meal slide-delay2">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Mousse au chocolat</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Au piment d'espelette et à la truffe noire</p>
+                                    <p class="meal__price">23€</p>
                                 </div>
-                                <p class="meal__price">23€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
@@ -166,18 +161,19 @@
                 <button type="submit">Commander</button>
             </div>
         </div>
+        
     </main>
     <footer>
-        <p>ohmyfood</p>
+        <h5>ohmyfood</h5>
         <ul>
             <li>
                 <a href="#">
-                    <i class="fas fa-utensils"></i> Proposez un restaurant
+                    <i class="fas fa-utensils footer-icon"></i> Proposez un restaurant
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <i class="fas fa-hands-helping"></i> Devenir partenaire
+                    <i class="fas fa-hands-helping footer-icon"></i> Devenir partenaire
                 </a>
             </li>
             <li>
