--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -37,38 +37,38 @@
                 <div class="card__menu">
                     <h3>ENTRÉES</h3>
                     <div class="card__menu__item">
-                        <div class="meal anim1">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Tartare de poulpe acidulé</h4>
-                                    <p class="meal__info__desc">Aux zestes d'orange</p>
+                        <div class="meal">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Tartare de poulpe acidulé</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Aux zestes d'orange</p>
+                                    <p class="meal__price">25€</p>
                                 </div>
-                                <p class="meal__price">25€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal anim2">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Velouté de légumes d'antan</h4>
-                                    <p class="meal__info__desc">Carotte, panais, topinambour</p>
+                        <div class="meal slide-delay1">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Velouté de légumes d'antan</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Carotte, panais, topinambour</p>
+                                    <p class="meal__price">35€</p>
                                 </div>
-                                <p class="meal__price">35€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal anim3">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Soupe à l'oignon</h4>
-                                    <p class="meal__info__desc">Revisitée</p>
+                        <div class="meal slide-delay2">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Soupe à l'oignon</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Revisitée</p>
+                                    <p class="meal__price">20€</p>
                                 </div>
-                                <p class="meal__price">20€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
@@ -78,38 +78,38 @@
                 <div class="card__menu">
                     <h3>PLATS</h3>
                     <div class="card__menu__item">
-                        <div class="meal anim1">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Coquilles Saint-Jacques</h4>
-                                    <p class="meal__info__desc">Accompagnées d'une purée de panais</p>
+                        <div class="meal">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Coquilles Saint-Jacques</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Accompagnées d'une purée de panais</p>
+                                    <p class="meal__price">40€</p>
                                 </div>
-                                <p class="meal__price">40€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal anim2">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Magret de canard</h4>
-                                    <p class="meal__info__desc">Et parmentier de pommes de terre</p>
+                        <div class="meal slide-delay1">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Magret de canard</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Et parmentier de pommes de terre</p>
+                                    <p class="meal__price">35€</p>
                                 </div>
-                                <p class="meal__price">35€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal anim3">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Pigeonneau d’Ille-et-Vilaine</h4>
-                                    <p class="meal__info__desc">Sur son lit de gnocchis aux légumes</p>
+                        <div class="meal slide-delay2">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Pigeonneau d’Ille-et-Vilaine</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Sur son lit de gnocchis aux légumes</p>
+                                    <p class="meal__price">44€</p>
                                 </div>
-                                <p class="meal__price">44€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
@@ -119,61 +119,62 @@
                 <div class="card__menu">
                     <h3>DESSERTS</h3>
                     <div class="card__menu__item">
-                        <div class="meal anim1">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Pétales de violettes glacés</h4>
-                                    <p class="meal__info__desc">Et purée de noisettes</p>
+                        <div class="meal">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Pétales de violettes glacés</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Et purée de noisettes</p>
+                                    <p class="meal__price">18€</p>
                                 </div>
-                                <p class="meal__price">18€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal anim2">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Fondant au chocolat</h4>
-                                    <p class="meal__info__desc">Revisité</p>
+                        <div class="meal slide-delay1">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Fondant au chocolat</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Revisité</p>
+                                    <p class="meal__price">22€</p>
                                 </div>
-                                <p class="meal__price">22€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal anim3">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Millefeuille croustillant</h4>
-                                    <p class="meal__info__desc">Myrtilles et pâte d’amande</p>
+                        <div class="meal slide-delay2">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Millefeuille croustillant</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Myrtilles et pâte d’amande</p>
+                                    <p class="meal__price">23€</p>
                                 </div>
-                            <p class="meal__price">23€</p>
-                        </div>
-                        <div class="check">
-                            <i class="fas fa-check-circle"></i>
+                            </article>
+                            <div class="check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="order-button">
+                <button type="submit">Commander</button>
+            </div>
         </div>
-        <div class="order-button">
-            <button type="submit">Commander</button>
-        </div>
-        </div>
+        
     </main>
     <footer>
-        <p>ohmyfood</p>
+        <h5>ohmyfood</h5>
         <ul>
             <li>
                 <a href="#">
-                    <i class="fas fa-utensils"></i> Proposez un restaurant
+                    <i class="fas fa-utensils footer-icon"></i> Proposez un restaurant
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <i class="fas fa-hands-helping"></i> Devenir partenaire
+                    <i class="fas fa-hands-helping footer-icon"></i> Devenir partenaire
                 </a>
             </li>
             <li>
