--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" media="screen and (max-width: 992px)" href="./CSS/tablet.css">
-    <link rel="stylesheet" media="screen and (max-width: 768px)" href="./CSS/mobil.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
     </style>
@@ -38,50 +36,50 @@
                 <div class="card__menu">
                     <h3>ENTRÉES</h3>
                     <div class="card__menu__item">
-                        <div class="meal anim1">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Ravioles de foie gras</h4>
-                                    <p class="meal__info__desc">Accompagnés de leur crème à la truffe</p>
+                        <div class="meal">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Ravioles de foie gras</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Accompagnés de leur crème à la truffe</p>
+                                    <p class="meal__price">25€</p>
                                 </div>
-                                <p class="meal__price">25€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal anim2">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Caviar osciètre</h4>
-                                    <p class="meal__info__desc">Sur blini à la farine de blé noir</p>
+                        <div class="meal slide-delay1">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Caviar osciètre</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Sur blini à la farine de blé noir</p>
+                                    <p class="meal__price">35€</p>
                                 </div>
-                                <p class="meal__price">35€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal anim3">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Homard et espuma de potiron</h4>
-                                    <p class="meal__info__desc">Mariné aux zestes d'orange</p>
+                        <div class="meal slide-delay2">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Homard et espuma de potiron</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Mariné aux zestes d'orange</p>
+                                    <p class="meal__price">20€</p>
                                 </div>
-                                <p class="meal__price">20€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal anim4">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Foie gras de canard cuit entier</h4>
-                                    <p class="meal__info__desc">Confiture de figue et pain toasté</p>
+                        <div class="meal slide-delay3">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Foie gras de canard cuit entier</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Confiture de figue et pain toasté</p>
+                                    <p class="meal__price">35€</p>
                                 </div>
-                                <p class="meal__price">35€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
@@ -91,38 +89,38 @@
                 <div class="card__menu">
                     <h3>PLATS</h3>
                     <div class="card__menu__item">
-                        <div class="meal anim1">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Noix de coquilles Saint-Jacques</h4>
-                                    <p class="meal__info__desc">Sur lit de purée de céleri-rave</p>
+                        <div class="meal">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Noix de coquilles Saint-Jacques</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Sur lit de purée de céleri-rave</p>
+                                    <p class="meal__price">40€</p>
                                 </div>
-                                <p class="meal__price">40€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal anim2">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Langoustine poêlée</h4>
-                                    <p class="meal__info__desc">Purée de patate douce</p>
+                        <div class="meal slide-delay1">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Langoustine poêlée</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Purée de patate douce</p>
+                                    <p class="meal__price">35€</p>
                                 </div>
-                                <p class="meal__price">35€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal anim3">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Mijoté de queue de boeuf </h4>
-                                    <p class="meal__info__desc">Et riz sauvage aux zestes de citron</p>
+                        <div class="meal slide-delay2">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Mijoté de queue de boeuf</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Et riz sauvage aux zestes de citron</p>
+                                    <p class="meal__price">44€</p>
                                 </div>
-                                <p class="meal__price">44€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
@@ -132,38 +130,38 @@
                 <div class="card__menu">
                     <h3>DESSERTS</h3>
                     <div class="card__menu__item">
-                        <div class="meal anim1">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Macaron noisette et chocolat</h4>
-                                    <p class="meal__info__desc">Glace au caramel brun et sel de Guérande</p>
+                        <div class="meal ">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Macaron noisette et chocolat</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Glace au caramel brun et sel de Guérande</p>
+                                    <p class="meal__price">18€</p>
                                 </div>
-                                <p class="meal__price">18€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal anim2">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Baba au rhum revisité </h4>
-                                    <p class="meal__info__desc">Avec son coulis de citron</p>
+                        <div class="meal slide-delay1">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Baba au rhum revisité</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Avec son coulis de citron</p>
+                                    <p class="meal__price">22€</p>
                                 </div>
-                                <p class="meal__price">22€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal anim3">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Tarte au citron meringuée </h4>
-                                    <p class="meal__info__desc">Déstructurée</p>
+                        <div class="meal slide-delay2">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Tarte au citron meringuée</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Destructurée</p>
+                                    <p class="meal__price">23€</p>
                                 </div>
-                                <p class="meal__price">23€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
@@ -175,18 +173,19 @@
                 <button type="submit">Commander</button>
             </div>
         </div>
+        
     </main>
     <footer>
-        <p>ohmyfood</p>
+        <h5>ohmyfood</h5>
         <ul>
             <li>
                 <a href="#">
-                    <i class="fas fa-utensils"></i> Proposez un restaurant
+                    <i class="fas fa-utensils footer-icon"></i> Proposez un restaurant
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <i class="fas fa-hands-helping"></i> Devenir partenaire
+                    <i class="fas fa-hands-helping footer-icon"></i> Devenir partenaire
                 </a>
             </li>
             <li>
