--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" media="screen and (max-width: 992px)" href="./CSS/tablet.css">
-    <link rel="stylesheet" media="screen and (max-width: 768px)" href="./CSS/mobil.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
     </style>
@@ -38,38 +36,38 @@
                 <div class="card__menu">
                     <h3>ENTRÉES</h3>
                     <div class="card__menu__item">
-                        <div class="meal anim1">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Tartare de thon</h4>
-                                    <p class="meal__info__desc">Assaisonné au yuzu</p>
+                        <div class="meal">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Tartare de thont</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Assaisonné au yuzu</p>
+                                    <p class="meal__price">25€</p>
                                 </div>
-                                <p class="meal__price">25€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal anim2">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Bouchée de homard croustillant</h4>
-                                    <p class="meal__info__desc">Et sa farandole de petits légumes</p>
+                        <div class="meal slide-delay1">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Bouchée de homard croustillant</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Et sa farandole de petits légumes</p>
+                                    <p class="meal__price">35€</p>
                                 </div>
-                                <p class="meal__price">35€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal anim3">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Velouté de cèpes</h4>
-                                    <p class="meal__info__desc">Aux truffes</p>
+                        <div class="meal slide-delay2">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Velouté de cèpes</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Aux truffes</p>
+                                    <p class="meal__price">20€</p>
                                 </div>
-                                <p class="meal__price">20€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
@@ -79,41 +77,38 @@
                 <div class="card__menu">
                     <h3>PLATS</h3>
                     <div class="card__menu__item">
-                        <div class="meal anim1">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Poulet rôti aux herbes de Provence</h4>
-                                    <p class="meal__info__desc">Et sa crème de truffe</p>
+                        <div class="meal">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Poulet rôti aux herbes de Provence</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Et sa crème de truffe</p>
+                                    <p class="meal__price">40€</p>
                                 </div>
-                                <p class="meal__price">40€</p>
-                            </div>
-
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal anim2">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Langouste rôtie</h4>
-                                    <p class="meal__info__desc">Et ses légumes de saison</p>
+                        <div class="meal slide-delay1">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Langouste rôtie</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Et ses légumes de saison</p>
+                                    <p class="meal__price">35€</p>
                                 </div>
-                                <p class="meal__price">35€</p>
-                            </div>
-
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal anim3">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Côte de boeuf Angus</h4>
-                                    <p class="meal__info__desc">Et sa purée de panais</p>
+                        <div class="meal slide-delay2">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Côte de boeuf Angus</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Et sa purée de panais</p>
+                                    <p class="meal__price">44€</p>
                                 </div>
-                                <p class="meal__price">44€</p>
-                            </div>
-
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
@@ -123,40 +118,38 @@
                 <div class="card__menu">
                     <h3>DESSERTS</h3>
                     <div class="card__menu__item">
-                        <div class="meal anim1">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Farandole de desserts</h4>
-                                    <p class="meal__info__desc">Du chef</p>
+                        <div class="meal">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Farandole de desserts</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Du chef</p>
+                                    <p class="meal__price">18€</p>
                                 </div>
-                                <p class="meal__price">18€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-
-                        <div class="meal anim2">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Crème brulée</h4>
-                                    <p class="meal__info__desc">Revisitée</p>
+                        <div class="meal slide-delay1">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Crème brulée</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">Revisitée</p>
+                                    <p class="meal__price">22€</p>
                                 </div>
-                                <p class="meal__price">22€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-
-                        <div class="meal anim3">
-                            <div class="meal__info">
-                                <div class="meal__info__text">
-                                    <h4 class="meal__info__title">Tiramisu</h4>
-                                    <p class="meal__info__desc">À la noisette</p>
+                        <div class="meal slide-delay2">
+                            <article class="meal__info">
+                                <h4 class="meal__info__title">Tiramisu</h4>
+                                <div class="meal__info__desc">
+                                    <p class="meal__desc">À la noisette</p>
+                                    <p class="meal__price">23€</p>
                                 </div>
-                                <p class="meal__price">23€</p>
-                            </div>
+                            </article>
                             <div class="check">
                                 <i class="fas fa-check-circle"></i>
                             </div>
@@ -168,18 +161,19 @@
                 <button type="submit">Commander</button>
             </div>
         </div>
+        
     </main>
     <footer>
-        <p>ohmyfood</p>
+        <h5>ohmyfood</h5>
         <ul>
             <li>
                 <a href="#">
-                    <i class="fas fa-utensils"></i> Proposez un restaurant
+                    <i class="fas fa-utensils footer-icon"></i> Proposez un restaurant
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <i class="fas fa-hands-helping"></i> Devenir partenaire
+                    <i class="fas fa-hands-helping footer-icon"></i> Devenir partenaire
                 </a>
             </li>
             <li>
