--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -20,8 +20,10 @@
 
 <body>
     <header>
+        <div class="logo">
+            <a href="./index.html"><img src="./assets/logo/ohmyfood@2x.svg" alt="Logo"></a>
+        </div>
         <a href="./index.html"><i class="fas fa-arrow-left"></i></a>
-        <h1 class="logo">ohmyfood</h1>
     </header>
     <main>
         <div class="bg">
@@ -48,7 +50,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal slide-delay1">
+                        <div class="meal">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Caviar osciètre</h4>
                                 <div class="meal__info__desc">
@@ -60,7 +62,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal slide-delay2">
+                        <div class="meal">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Homard et espuma de potiron</h4>
                                 <div class="meal__info__desc">
@@ -88,7 +90,7 @@
                 </div>
                 <div class="card__menu">
                     <h3>PLATS</h3>
-                    <div class="card__menu__item">
+                    <div class="card__menu__item slide-delay1">
                         <div class="meal">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Noix de coquilles Saint-Jacques</h4>
@@ -101,7 +103,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal slide-delay1">
+                        <div class="meal">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Langoustine poêlée</h4>
                                 <div class="meal__info__desc">
@@ -113,7 +115,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal slide-delay2">
+                        <div class="meal">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Mijoté de queue de boeuf</h4>
                                 <div class="meal__info__desc">
@@ -129,7 +131,7 @@
                 </div>
                 <div class="card__menu">
                     <h3>DESSERTS</h3>
-                    <div class="card__menu__item">
+                    <div class="card__menu__item slide-delay2">
                         <div class="meal ">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Macaron noisette et chocolat</h4>
@@ -142,7 +144,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal slide-delay1">
+                        <div class="meal">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Baba au rhum revisité</h4>
                                 <div class="meal__info__desc">
@@ -154,7 +156,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal slide-delay2">
+                        <div class="meal">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Tarte au citron meringuée</h4>
                                 <div class="meal__info__desc">
@@ -176,7 +178,9 @@
         
     </main>
     <footer>
-        <h5>ohmyfood</h5>
+        <a href="./index.html">
+            <h5>ohmyfood</h5>
+        </a>
         <ul>
             <li>
                 <a href="#">
