--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -21,8 +21,10 @@
 
 <body>
     <header>
+        <div class="logo">
+            <a href="./index.html"><img src="./assets/logo/ohmyfood@2x.svg" alt="Logo"></a>
+        </div>
         <a href="./index.html"><i class="fas fa-arrow-left"></i></a>
-        <h1 class="logo">ohmyfood</h1>
     </header>
     <main>
         <div class="bg">
@@ -49,7 +51,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal slide-delay1">
+                        <div class="meal">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Velouté de légumes d'antan</h4>
                                 <div class="meal__info__desc">
@@ -61,7 +63,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal slide-delay2">
+                        <div class="meal">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Soupe à l'oignon</h4>
                                 <div class="meal__info__desc">
@@ -77,7 +79,7 @@
                 </div>
                 <div class="card__menu">
                     <h3>PLATS</h3>
-                    <div class="card__menu__item">
+                    <div class="card__menu__item slide-delay1">
                         <div class="meal">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Coquilles Saint-Jacques</h4>
@@ -90,7 +92,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal slide-delay1">
+                        <div class="meal">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Magret de canard</h4>
                                 <div class="meal__info__desc">
@@ -102,7 +104,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal slide-delay2">
+                        <div class="meal">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Pigeonneau d’Ille-et-Vilaine</h4>
                                 <div class="meal__info__desc">
@@ -118,7 +120,7 @@
                 </div>
                 <div class="card__menu">
                     <h3>DESSERTS</h3>
-                    <div class="card__menu__item">
+                    <div class="card__menu__item slide-delay2">
                         <div class="meal">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Pétales de violettes glacés</h4>
@@ -131,7 +133,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal slide-delay1">
+                        <div class="meal">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Fondant au chocolat</h4>
                                 <div class="meal__info__desc">
@@ -143,7 +145,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal slide-delay2">
+                        <div class="meal">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Millefeuille croustillant</h4>
                                 <div class="meal__info__desc">
@@ -162,10 +164,12 @@
                 <button type="submit">Commander</button>
             </div>
         </div>
-        
+
     </main>
     <footer>
-        <h5>ohmyfood</h5>
+        <a href="./index.html">
+            <h5>ohmyfood</h5>
+        </a>
         <ul>
             <li>
                 <a href="#">
