--- a/index.html
+++ b/index.html
@@ -158,7 +158,9 @@
         </section>
     </main>
     <footer>
+        <a href="./index.html">
         <h5>ohmyfood</h5>
+        </a>
         <ul>
             <li>
                 <a href="#">
