--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -20,8 +20,10 @@
 
 <body>
     <header>
+        <div class="logo">
+            <a href="./index.html"><img src="./assets/logo/ohmyfood@2x.svg" alt="Logo"></a>
+        </div>
         <a href="./index.html"><i class="fas fa-arrow-left"></i></a>
-        <h1 class="logo">ohmyfood</h1>
     </header>
     <main>
         <div class="bg">
@@ -48,7 +50,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal slide-delay1">
+                        <div class="meal">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Foie gras de canard mi-cuit</h4>
                                 <div class="meal__info__desc">
@@ -60,7 +62,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal slide-delay2">
+                        <div class="meal">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Oeuf au plat</h4>
                                 <div class="meal__info__desc">
@@ -76,7 +78,7 @@
                 </div>
                 <div class="card__menu">
                     <h3>PLATS</h3>
-                    <div class="card__menu__item">
+                    <div class="card__menu__item slide-delay1">
                         <div class="meal">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Filet de boeuf aux herbes</h4>
@@ -89,7 +91,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal slide-delay1">
+                        <div class="meal">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Parmentier de queue de boeuf</h4>
                                 <div class="meal__info__desc">
@@ -101,7 +103,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal slide-delay2">
+                        <div class="meal">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Filet de Turbot</h4>
                                 <div class="meal__info__desc">
@@ -117,7 +119,7 @@
                 </div>
                 <div class="card__menu">
                     <h3>DESSERTS</h3>
-                    <div class="card__menu__item">
+                    <div class="card__menu__item slide-delay2">
                         <div class="meal">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Paris-Brest</h4>
@@ -161,10 +163,12 @@
                 <button type="submit">Commander</button>
             </div>
         </div>
-        
+
     </main>
     <footer>
-        <h5>ohmyfood</h5>
+        <a href="./index.html">
+            <h5>ohmyfood</h5>
+        </a>
         <ul>
             <li>
                 <a href="#">
