--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -39,7 +39,7 @@
                 <div class="card__menu">
                     <h3>ENTRÉES</h3>
                     <div class="card__menu__item">
-                        <div class="meal">
+                        <div class="meal meal__entree">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Tartare de poulpe acidulé</h4>
                                 <div class="meal__info__desc">
@@ -51,7 +51,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal meal__entree">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Velouté de légumes d'antan</h4>
                                 <div class="meal__info__desc">
@@ -63,7 +63,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal meal__entree">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Soupe à l'oignon</h4>
                                 <div class="meal__info__desc">
@@ -79,8 +79,8 @@
                 </div>
                 <div class="card__menu">
                     <h3>PLATS</h3>
-                    <div class="card__menu__item slide-delay1">
-                        <div class="meal">
+                    <div class="card__menu__item">
+                        <div class="meal meal__plat">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Coquilles Saint-Jacques</h4>
                                 <div class="meal__info__desc">
@@ -92,7 +92,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal meal__plat">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Magret de canard</h4>
                                 <div class="meal__info__desc">
@@ -104,7 +104,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal meal__plat">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Pigeonneau d’Ille-et-Vilaine</h4>
                                 <div class="meal__info__desc">
@@ -120,8 +120,8 @@
                 </div>
                 <div class="card__menu">
                     <h3>DESSERTS</h3>
-                    <div class="card__menu__item slide-delay2">
-                        <div class="meal">
+                    <div class="card__menu__item">
+                        <div class="meal meal__dessert">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Pétales de violettes glacés</h4>
                                 <div class="meal__info__desc">
@@ -133,7 +133,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal meal__dessert">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Fondant au chocolat</h4>
                                 <div class="meal__info__desc">
@@ -145,7 +145,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal meal__dessert">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Millefeuille croustillant</h4>
                                 <div class="meal__info__desc">
