--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -38,7 +38,7 @@
                 <div class="card__menu">
                     <h3>ENTRÉES</h3>
                     <div class="card__menu__item">
-                        <div class="meal">
+                        <div class="meal meal__entree">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Fricassée d'escargot</h4>
                                 <div class="meal__info__desc">
@@ -50,7 +50,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal meal__entree">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Foie gras de canard mi-cuit</h4>
                                 <div class="meal__info__desc">
@@ -62,7 +62,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal meal__entree">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Oeuf au plat</h4>
                                 <div class="meal__info__desc">
@@ -78,8 +78,8 @@
                 </div>
                 <div class="card__menu">
                     <h3>PLATS</h3>
-                    <div class="card__menu__item slide-delay1">
-                        <div class="meal">
+                    <div class="card__menu__item">
+                        <div class="meal meal__plat">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Filet de boeuf aux herbes</h4>
                                 <div class="meal__info__desc">
@@ -91,7 +91,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal meal__plat">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Parmentier de queue de boeuf</h4>
                                 <div class="meal__info__desc">
@@ -103,7 +103,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal meal__plat">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Filet de Turbot</h4>
                                 <div class="meal__info__desc">
@@ -119,8 +119,8 @@
                 </div>
                 <div class="card__menu">
                     <h3>DESSERTS</h3>
-                    <div class="card__menu__item slide-delay2">
-                        <div class="meal">
+                    <div class="card__menu__item">
+                        <div class="meal meal__dessert">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Paris-Brest</h4>
                                 <div class="meal__info__desc">
@@ -132,7 +132,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal slide-delay1">
+                        <div class="meal meal__dessert">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Macaron au chocolat d'exception</h4>
                                 <div class="meal__info__desc">
@@ -144,7 +144,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal slide-delay2">
+                        <div class="meal meal__dessert">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Mousse au chocolat</h4>
                                 <div class="meal__info__desc">
