--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -38,7 +38,7 @@
                 <div class="card__menu">
                     <h3>ENTRÉES</h3>
                     <div class="card__menu__item">
-                        <div class="meal">
+                        <div class="meal meal__entree">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Tartare de thont</h4>
                                 <div class="meal__info__desc">
@@ -50,7 +50,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal meal__entree">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Bouchée de homard croustillant</h4>
                                 <div class="meal__info__desc">
@@ -62,7 +62,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal meal__entree">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Velouté de cèpes</h4>
                                 <div class="meal__info__desc">
@@ -78,8 +78,8 @@
                 </div>
                 <div class="card__menu">
                     <h3>PLATS</h3>
-                    <div class="card__menu__item slide-delay1">
-                        <div class="meal">
+                    <div class="card__menu__item">
+                        <div class="meal meal__plat">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Poulet rôti aux herbes de Provence</h4>
                                 <div class="meal__info__desc">
@@ -91,7 +91,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal meal__plat">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Langouste rôtie</h4>
                                 <div class="meal__info__desc">
@@ -103,7 +103,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal meal__plat">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Côte de boeuf Angus</h4>
                                 <div class="meal__info__desc">
@@ -119,8 +119,8 @@
                 </div>
                 <div class="card__menu">
                     <h3>DESSERTS</h3>
-                    <div class="card__menu__item slide-delay2">
-                        <div class="meal">
+                    <div class="card__menu__item">
+                        <div class="meal meal__dessert">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Farandole de desserts</h4>
                                 <div class="meal__info__desc">
@@ -132,7 +132,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal meal__dessert">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Crème brulée</h4>
                                 <div class="meal__info__desc">
@@ -144,7 +144,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                         </div>
-                        <div class="meal">
+                        <div class="meal meal__dessert">
                             <article class="meal__info">
                                 <h4 class="meal__info__title">Tiramisu</h4>
                                 <div class="meal__info__desc">
