--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
     <main>
 
         <section>
-            <div class="search">
+            <form class="search">
                 <label class="search__icon">
                     <i class="fas fa-map-marker-alt"></i>
                 </label>
                 <input type="search" class="search" value="Paris, Belleville">
-            </div>
+            </form>
             <div class="menu">
                 <h1>
                     Réservez le menu qui vous convient
